deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylar
  labels:
    app: mylar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mylar
  template:
    metadata:
      labels:
        app: mylar
    spec:
      containers:
      - name: mylar
        image: jmeritt/mylar
        imagePullPolicy: Always
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: programdata
          mountPath: /programdata
        - name: comics
          mountPath: /comics
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: programdata
        emptyDir: {}
      - name: comics
        emptyDir: {}
      - name: downloads
        emptyDir: {}
