service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mylar
  labels:
    app: mylar
spec:
  ports:
  - port: 8090
    targetPort: 8090
  selector:
    app: mylar
